--- a/templates/night.html
+++ b/templates/night.html
@@ -30,8 +30,7 @@
                     Wrong Movie <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a href="{{url_for('main.bad_movie', materkey=movienight.imdbid, use_rt=0)}}">Skip Rotten Tomatoes (usually the right choice)</a></li>
-                    <li><a href="{{url_for('main.bad_movie', materkey=movienight.imdbid, use_rt=1)}}">Retry Rotten Tomatoes</a></li>
+                    <li><a href="{{url_for('main.bad_movie', imdbkey=movienight.imdbid)}}">Retry OMDB API</a></li>
                 </ul>
             </div>
         {% endif %}
