--- a/static/nutbush.css
+++ b/static/nutbush.css
@@ -32,3 +32,15 @@
     -webkit-column-count: 2;
     column-count: 2;
 }
+
+/* Movie details */
+#det-movieimg {
+    display: inline;
+    float: right;
+}
+.data-name {
+    font-weight: bold;
+}
+.data-value {
+    font-weight: normal;
+}
