--- a/templates/base.html
+++ b/templates/base.html
@@ -220,7 +220,7 @@
                 <a href="{{url_for('lawyer.faq')}}">FAQ</a>
             </div>
             <div class="text-success" style="font-size: 65%;">
-                Copyright (c) {{g.year}} - but we'll share if you ask. Hello 3
+                Copyright (c) {{g.year}} - but we'll share if you ask nicely.
             </div>
         </div>
     </div>
