--- a/templates/base.html
+++ b/templates/base.html
@@ -221,6 +221,7 @@
             </div>
             <div class="text-success" style="font-size: 65%;">
                 Copyright (c) {{g.year}} - but we'll share if you ask nicely.
+                <p>Be sure to ask Marty about going vegan.</p>
             </div>
         </div>
     </div>
