Removed theme customization

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,8 @@
 <link href="//cdn.datatables.net/responsive/1.0.3/css/dataTables.responsive.css" rel="stylesheet">
 <link href="//cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css" rel="stylesheet">
 
-<link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/{{jqueryui_theme}}/jquery-ui.css" rel="stylesheet" />
-<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/{{bootswatch_theme}}/bootstrap.min.css" rel="stylesheet">
+<link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/humanity/jquery-ui.css" rel="stylesheet" />
+<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/paper/bootstrap.min.css" rel="stylesheet">
 
 <link rel="stylesheet" href="/static/nutbush.css" type="text/css">
 </head>
