--- a/templates/person.html
+++ b/templates/person.html
@@ -24,7 +24,7 @@
         {% for mn in person.nights %}
             <tr>
                 <td class="nw"><a href="{{url_for('main.night_display', datestr=mn.datestr)}}">{{mn.listdate_short}}</a></td>
-                <td><a href="{{url_for('main.movie_display', moviekey=mn.imdbid)}}">{{mn.moviename}}</a></td>
+                <td><a class="movie-auto-click" data-imdbid="{{mn.imdbid}}" href="{{url_for('main.movie_display', moviekey=mn.imdbid)}}">{{mn.moviename}}</a></td>
                 <td>{{mn.dinner}}</td>
             </tr>
         {% endfor %}
