--- a/templates/tos.html
+++ b/templates/tos.html
@@ -7,7 +7,37 @@
 
 <div class="row">
 <div class="col-md-12">
-    <small>We store data that you look at</small>
+    <ol>
+        <li>
+            By using this site, you agree to hold the creators of this site
+            blameless if you should happen to get any of the following:
+
+            <ul>
+                <li>The vapors</li>
+                <li>The heebie-jeebies</li>
+                <li>The fantods</li>
+                <li>Sick and/or tired</li>
+                <li>Old</li>
+                <li>Caught stealing</li>
+                <li>The jimmy legs</li>
+                <li>Touched by an angel</li>
+                <li>Touched by an uncle</li>
+                <li>Torn between two lovers</li>
+                <li>Vague feelings of disappointment with the way your life turned out</li>
+            </ul>
+        </li>
+
+        <li>
+            If anything contained in this site causes you to have feelings, you agree to
+            send those feelings to us in a little box tied with a bow. Send them to Marty.
+        </li>
+
+        <li>
+            If you would like to contact us, wait until these words come to you in a
+            whisper. Say these words as a prayer, as regret, as praise, say: Lowenstein,
+            Lowenstein.
+        </li>
+    </ol>
 </div>
 </div>
 
