--- a/templates/person.html
+++ b/templates/person.html
@@ -40,11 +40,27 @@
         {% endif %}
 
     {% else %}
-        <ul>
-        {% for per in persons %}
-            <li><a href="{{url_for('main.person_display', name=per.urlname)}}">{{per.name}}</a></li>
-        {% endfor %}
-        </ul>
+        <table class="table table-hover datatable SortableTable" id="allpeople" name="allpeople">
+            <thead>
+                <tr><th>Name</th><th>Nights Attended</th><th>Last Night</th></tr>
+            </thead>
+
+            <tbody>
+
+                {% for per in persons %}
+                    <tr>
+                        <td><a href="{{url_for('main.person_display', name=per.urlname)}}">{{per.name}}</a></td>
+                        {% if per.nights %}
+                            <td>{{person.nights|length}}</td>
+                            <td><a href="{{url_for('main.night_display', datestr=person.nights[0].datestr)}}">{{person.nights[0].listdate}}</a></td>
+                        {% else %}
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                        {% endif %}
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     {% endif %}
 
     </div>
